force-app/main/default/objects/vacRep__ReplacedRecord__c/vacRep__ReplacedRecord__c.object-meta.xml
<CustomObject>
    <description>Link between substitute and record</description>
    <label>Replaced Record</label>
    <nameField>
        <displayFormat>RR-{YY}{MM}{DD}{000000}</displayFormat>
        <label>ReplacementNr</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Replaced Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>