force-app/main/default/objects/vacRep__ReplacedRecord__c/fields/vacRep__Object__c.field-meta.xml
<CustomField>
    <fullName>vacRep__Object__c</fullName>
    <description>Object that this record is referring to</description>
    <inlineHelpText>Object that this record is referring to</inlineHelpText>
    <label>Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>