force-app/main/default/objects/vacRep__ReplacedRecord__c/fields/vacRep__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>vacRep__Record_Id__c</fullName>
    <description>Record Id for the object that this replacement entry is valid for</description>
    <inlineHelpText>Record Id for the object that this replacement entry is valid for</inlineHelpText>
    <label>Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>