force-app/main/default/objects/vacRep__ReplacedRecord__c/fields/vacRep__Record_Link__c.field-meta.xml
<CustomField>
    <fullName>vacRep__Record_Link__c</fullName>
    <description>Link to the replaced record</description>
    <formula>IF(NOT(ISBLANK(vacRep__Record_Id__c)), HYPERLINK(&quot;/&quot; &amp; vacRep__Record_Id__c, vacRep__Record_Id__c), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Link to the replaced record</inlineHelpText>
    <label>Record Link</label>
    <type>Text</type>
</CustomField>