force-app/main/default/objects/vacRep__ReplacedRecord__c/fields/vacRep__Vacation_Replacement__c.field-meta.xml
<CustomField>
    <fullName>vacRep__Vacation_Replacement__c</fullName>
    <description>Vacation Replacement that caused this replacement</description>
    <inlineHelpText>Vacation Replacement that caused this replacement</inlineHelpText>
    <label>Vacation Replacement</label>
    <referenceTo>vacRep__Vacation_Replacement__c</referenceTo>
    <relationshipLabel>Replaced Records</relationshipLabel>
    <relationshipName>Replaced_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>